@@ -3,6 +3,7 @@
 	* gui/mainWindow.py (MainApp.setFractures): Add execution of the
 	algorithm.
 	(MainApp.step): Move the execution to its own function to run when idle.
+	(MainApp.step): Add connect that allows results to be displayed.
 
 2016-09-29  Javier Esteban Salazar Loyola  <jsalazarloyola@gmail.com>
 
